--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,10 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    h1= title
+    p Welcome to the #{title}
+    ul
+        li
+            a(href='/userlist') View the User List
+        li
+            a(href='/newuser') Add a User
