--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -1,9 +1,11 @@
 extends layout
 
 block content
-	h1.
-		User List
-	ul
-		each user, i in userlist
-			li
-				a(href="mailto:#{user.email}")= user.username
+    h1.
+        User List
+    ul
+        each user, i in userlist
+            li
+                a(href="mailto:#{user.email}")= user.username
+    p
+        a(href='../') Back to Home
